# apc-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: cache.py  collect.py  export_import.py  install.py  llm_client.py  main.py  memory.py  skills.py  status.py  sync_helpers.py  ui.py
src/appliers/: __init__.py  base.py  claude.py  copilot.py  cursor.py  gemini.py  openclaw.py  windsurf.py
src/extractors/: __init__.py  claude.py  copilot.py  gemini.py
tests/: test_appliers.py  test_docker_integration.py  test_e2e.py  test_export_import.py  test_extractors.py  test_manifest.py  test_memory_bugs_36_45.py  test_security_input_validation.py  test_sync_helpers.py
