[project]
name = "apc"
version = "0.1.0"
description = "AI Personal Context — sync AI agent configs across machines and tools"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "pyrage>=1.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[project.scripts]
apc = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "cache", "collect", "config", "export_import",
"frontmatter_parser", "install", "llm_client", "llm_config",
    "main", "mcp", "memory", "secrets_manager",
    "skill", "skills", "status", "sync_helpers", "ui",
]
packages = ["extractors", "appliers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
